# rusty_todo

./: Cargo.toml  README.md  config.toml  openapi.yaml
migrations/: 20220809164619_init.sql
src/: application_config.rs  errors.rs  handlers.rs  main.rs  models.rs  repository.rs
src/models/: api.rs  internal.rs
