[package]
name = "rusty_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
tokio = {version = "1.2.1", features = ["full"]}
sqlx = {version = "0.6.1", features = ["postgres", "runtime-tokio-native-tls"]}
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0.83"
toml = "0.5.9"
actix-web-httpauth = "0.8.0"
thiserror = "1.0.32"
flexi_logger = "0.23.0"
log = "0.4.17"
bcrypt = "0.13.0"
